--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "nodemon": "^2.0.19"
   },
   "dependencies": {
+    "apicache": "^1.6.3",
     "express": "^4.18.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0",
     "uuid": "^8.3.2"
   }
 }
